@@ -141,6 +141,9 @@ For the sticker database.
 libcue - http://libcue.sourceforge.net/
 For CUE sheet support.
 
+libcdio - http://www.gnu.org/software/libcdio/
+For playing audio CDs.
+
 
 pkg-config
 ----------
