@@ -37,6 +37,10 @@
 #include "input/mms_input_plugin.h"
 #endif
 
+#ifdef ENABLE_CDIO_PARANOIA
+#include "input/cdio_paranoia_input_plugin.h"
+#endif
+
 #include <glib.h>
 
 const struct input_plugin *const input_plugins[] = {
@@ -52,6 +56,9 @@ const struct input_plugin *const input_plugins[] = {
 #endif
 #ifdef ENABLE_MMS
 	&input_plugin_mms,
+#endif
+#ifdef ENABLE_CDIO_PARANOIA
+	&input_plugin_cdio_paranoia,
 #endif
 	NULL
 };
